# py_tmi

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture.md  changelog.md  contributing.md  getting-started.md
docs/api/: client.md  utilities.md
src/py_tmi/: __init__.py  client.py  client_base.py  event_emitter.py  exceptions.py  logger.py  message_queue.py  options.py  parser.py  utils.py
tests/: test_event_emitter.py  test_parser.py  test_utils.py
